@@ -427,10 +427,8 @@ the spacing is 1.</p></dd>
 <dd><p>Draw text.</p></dd>
 <dt><a name="37"><i class="arg">objectName</i> <b class="method">getFontMetric</b> <i class="arg">metric</i></a></dt>
 <dd><p>Get information about current font. The available <i class="arg">metric</i>s are
-<b class="option">ascend</b>, <b class="option">descend</b>, <b class="option">fixed</b>, <b class="option">bboxy</b> and
-<b class="option">height</b>.
-Get information about current font. The available <i class="arg">metric</i>s are
-<b class="option">bboxt</b> and <b class="option">bboxb</b>.</p></dd>
+<b class="option">ascend</b>, <b class="option">descend</b>, <b class="option">fixed</b>, <b class="option">bboxb</b>,
+<b class="option">bboxt</b> and <b class="option">height</b>.</p></dd>
 </dl>
 </div>
 <div id="subsection6" class="subsection"><h3><a name="subsection6">OBJECT METHODS, IMAGES</a></h3>
