@@ -1,4 +1,9 @@
 2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Added tests for font loading
+	* Corrected naming of bboxb/t metrics.
+	* Changed height metric to measure full bbox height
+
+2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Got font examples working.
 
 2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
